full filter search

--- a/src/app/shared/components/cma-multi-select/cma-multi-select.component.scss
+++ b/src/app/shared/components/cma-multi-select/cma-multi-select.component.scss
@@ -6,4 +6,7 @@
   .p-multiselect-panel .p-multiselect-items .p-multiselect-item {
     font-size: 14px;
   }
+  .p-inputwrapper-filled .p-multiselect.p-multiselect-chip .p-multiselect-label {
+    padding: 2px 5px;
+  }
 }
