get onboarding by id/edit in progress

--- a/src/app/shared/components/cma-stepper/cma-stepper.component.scss
+++ b/src/app/shared/components/cma-stepper/cma-stepper.component.scss
@@ -22,6 +22,7 @@
   }
   .p-timeline .p-timeline-event-marker {
     border: 2px solid $color-gray-2;
+    height: 0.9rem !important;
   }
   .p-timeline-event {
     &:last-child {
