--- a/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.scss
@@ -7,6 +7,18 @@ ul {
   list-style-type: none;
   padding: 0 0 0 10px;
 }
+.uploaded-files {
+  width: 100%;
+  padding: 5px 10px;
+  border-top: thin $color-gray-3 solid;
+  padding-top: 15px;
+  div {
+    width: 100%;
+  }
+  h5 {
+    margin: 0;
+  }
+}
 .upload-thumb {
   > div {
     height: 140px;
@@ -56,6 +68,7 @@ ul {
   overflow: hidden;
   height: 100%;
   max-width: 690px;
+
 }
 .action-btns {
   margin-top: 20px;
@@ -65,6 +78,21 @@ ul {
   width: 100%;
 }
 :host ::ng-deep {
+  .p-fileupload-row {
+    margin-bottom: 10px;
+  }
+  .p-fileupload .p-fileupload-row > div {
+    padding: 0 !important;
+  }
+  .p-button {
+    &.danger {
+      width: 2.357rem !important;
+      padding: 9px !important;
+      span.p-button-label {
+        display: none !important;
+      }
+    }
+  }
   .p-progressbar {
      display: none;
   }
