--- a/src/app/modules/on-boarding/components/on-boarding-vehicle/on-boarding-vehicle.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-vehicle/on-boarding-vehicle.component.html
@@ -10,7 +10,7 @@
             <button pButton pRipple type="button" (click)="onAdd()" label="Add Vehicle" class="p-button-rounded primary"></button>
           </div>
 
-          <div *ngFor="let vehicle of getVehicles; let i = index" fxLayout="column">
+          <div *ngFor="let vehicle of getVehiclesFormArr; let i = index" fxLayout="column">
             <ng-container formArrayName="vehicles">
               <div fxFlex fxLayoutGap="20px" [formGroupName]="i" fxLayout="row" fxLayoutAlign="start center">
                 <cma-input [form]="vehicle" [isReadOnly]="true" controlName="model" label="Model"></cma-input>
