--- a/src/app/modules/dashboard/components/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.html
+++ b/src/app/modules/dashboard/components/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.html
@@ -1,4 +1,4 @@
-<mat-accordion *ngIf="($onboardings | async) as onboardings; else noRecords">
+<mat-accordion *ngIf="($onboardings | async) as onboardings; else noRecords" [multi]="true">
   <mat-expansion-panel *ngFor="let item of onboardings; let i = index" [expanded]="i === 0">
     <mat-expansion-panel-header>
       <mat-panel-title>
