upload and display documents

--- a/src/app/modules/dashboard/components/dashboard-requests/dashboard-requests.component.html
+++ b/src/app/modules/dashboard/components/dashboard-requests/dashboard-requests.component.html
@@ -11,7 +11,7 @@
     <div class="panel-actions">
       <div fxFlex fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="10px">
         <cma-input-search fxFlex="70"></cma-input-search>
-        <cma-multi-select fxFlex></cma-multi-select>
+        <cma-multi-select fxFlex [options]="filterOptions" [form]="form" controlName="fieldFilter"></cma-multi-select>
       </div>
       <p-paginator [rows]="10" [totalRecords]="120" [rowsPerPageOptions]="[10,20,30]"></p-paginator>
     </div>
