--- a/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
@@ -119,7 +119,7 @@
 
     <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
       <button pButton pRipple type="button" (click)="onPrev()" label="Previous" class="p-button-rounded default"></button>
-      <button [disabled]="!form.valid || !hasDocs" pButton pRipple type="button" (click)="onSubmit()" label="Submit" class="p-button-rounded success"></button>
+      <button [disabled]="!form.valid || !hasToUploadDocs" pButton pRipple type="button" (click)="onSubmit()" label="Submit" class="p-button-rounded success"></button>
     </div>
   </div>
 
