--- a/src/app/modules/on-boarding/components/on-boarding-occupants/on-boarding-occupants.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-occupants/on-boarding-occupants.component.html
@@ -27,6 +27,6 @@
 
   <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
     <button pButton pRipple type="button" (click)="onPrev()" label="Previous" class="p-button-rounded default"></button>
-    <button pButton pRipple type="button" (click)="onNext()" label="Next" class="p-button-rounded success"></button>
+    <button [disabled]="!getOccupantsForm.valid" pButton pRipple type="button" (click)="onNext()" label="Next" class="p-button-rounded success"></button>
   </div>
 </div>
