--- a/src/app/modules/on-boarding/components/on-boarding-spouse/on-boarding-spouse.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-spouse/on-boarding-spouse.component.html
@@ -29,7 +29,7 @@
     <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
       <cma-dropdown [form]="getSpouseForm" controlName="idType" label="ID Type" [options]="IdTypeOptions" placeholder="ID Type"></cma-dropdown>
       <cma-input [form]="getSpouseForm" controlName="idNo" label="ID No." placeholder="ID No."></cma-input>
-      <cma-upload (fileEmitter)="onSpouseImageChange($event)" [file]="getSpouseForm.get('uploadSpouseIdFile').value" [fileName]="getFileName('uploadSpouseIdFile')"></cma-upload>
+      <cma-upload [disabled]="uploadSpouseIdFileDisabled" (fileEmitter)="onSpouseImageChange($event)" [file]="getSpouseForm.get('uploadSpouseIdFile').value" [fileName]="getFileName('uploadSpouseIdFile')"></cma-upload>
     </div>
   </div>
 
