--- a/src/app/modules/dashboard/components/dashboard-on-boarding/dashboard-on-boarding.component.scss
+++ b/src/app/modules/dashboard/components/dashboard-on-boarding/dashboard-on-boarding.component.scss
@@ -10,6 +10,10 @@
 }
 .settings i {
   cursor: pointer;
+  min-width: 25px;
+}
+.pi-user-plus {
+  font-size: 1.1rem;
 }
 .pi-refresh {
   margin-right: 10px;
