--- a/src/app/modules/on-boarding/components/on-boarding-type/on-boarding-type.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-type/on-boarding-type.component.html
@@ -26,7 +26,10 @@
         </mat-card>
       </div>
 
+      <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+        <button pButton pRipple type="button" (click)="onCancel()" label="Cancel" class="p-button-rounded default"></button>
       <button [disabled]="isDisabled" (click)="onNext()" pButton pRipple type="button" label="Next" class="p-button-rounded success"></button>
+      </div>
     </div>
   </div>
 </div>
